# candle_demo_yolov8

./: .gitignore  Cargo.toml  README.md  plot-data-from-csv_image.py
src/: lib.rs  main.rs  model.rs
