[package]
name = "candle_examples"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0"
candle = { package = "candle-core", version = "0.9.2-alpha.2" }
candle-nn = {  version = "0.9.2-alpha.2" }
candle-transformers = {  version = "0.9.2-alpha.2" }
candle-onnx = "0.9.2-alpha.2"
clap = { version = "4.5", features = ["derive"] }
hf-hub = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
imageproc = { version = "0.25", default-features = false }
rusttype = "0.9"
tokenizers = "0.22"
tracing = "0.1"
tracing-chrome = "0.7"
tracing-subscriber = "0.3"
ab_glyph = "0.2"
serde_plain = "1.0"
serde_json = "1.0"
